WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
279060
Never paginate fixed-positioned objects
https://bugs.webkit.org/show_bug.cgi?id=279060
Summary
Never paginate fixed-positioned objects
Ahmad Saleem
Reported
2024-09-03 06:51:45 PDT
Created
attachment 472418
[details]
Test Case from Blink Hi Team, This is to merge:
https://chromium.googlesource.com/chromium/src.git/+/344e69ca2b1f2e20346eeb1f6d3d7d9fad38fd82
But don't add - ixedpos-in-transform-at-column-boundary.html because it was converted into WPT by
https://chromium.googlesource.com/chromium/src/+/8ddecd73089b2c3f8d4092c699378caefe0d70bd
(along with better fix). Additionally, above merge was regression fix but we don't have regression but still good to fix since we fail test case (which was attached to Blink / Chromium bug), which don't show 'PASS' in print preview. Thanks!
Attachments
Test Case from Blink
(503 bytes, text/html)
2024-09-03 06:51 PDT
,
Ahmad Saleem
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-03 06:52:29 PDT
<
rdar://problem/135189288
>
Ahmad Saleem
Comment 2
2024-09-03 07:00:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33067
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug