Source/WebCore/rendering/RenderBox.cpp
@@ -5317,6 +5317,7 @@ bool RenderBox::isUnsplittableForPagination() const
         || hasUnsplittableScrollingOverflow()
         || (parent() && isWritingModeRoot())
         || (isFloating() && style().pseudoElementType() == PseudoId::FirstLetter && style().initialLetterDrop() > 0)
+        || RenderObject::isFixedPositioned()
         || shouldApplySizeContainment();
 }
 
